// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfficesPage should match a snapshot for the office groups tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Offices
          </h1>
          <div
            class="el-mb9 el-secondary-nav"
          >
            <div
              class="el-secondary-nav-item"
            >
              Offices
            </div>
            <div
              class="el-is-active el-secondary-nav-item"
            >
              Office Groups
            </div>
          </div>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <p
            class="el-has-grey-text el-body-text"
          >
            This list contains all ‘Offices’ within your organisation. To create or manage an Office Group, please visit the ‘Office Groups’ page.
          </p>
          <button
            class="el-mb5 el-intent-primary el-button"
          >
            Create Group
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-button"
          >
            Docs
            <div
              class="el-button-loader"
            />
          </button>
          <div
            class="el-mb5"
          >
            <h2
              class="el-subtitle"
            >
              Organisations
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </p>
            <div
              class="el-border-radius controls-container"
            >
              <div
                class="el-input-group"
              >
                <select
                  class="el-wfull el-select"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                </select>
                <label
                  class="el-label"
                  for="myId"
                >
                  Select Organisation
                </label>
              </div>
            </div>
          </div>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <div />
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Offices
        </h1>
        <div
          class="el-mb9 el-secondary-nav"
        >
          <div
            class="el-secondary-nav-item"
          >
            Offices
          </div>
          <div
            class="el-is-active el-secondary-nav-item"
          >
            Office Groups
          </div>
        </div>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <p
          class="el-has-grey-text el-body-text"
        >
          This list contains all ‘Offices’ within your organisation. To create or manage an Office Group, please visit the ‘Office Groups’ page.
        </p>
        <button
          class="el-mb5 el-intent-primary el-button"
        >
          Create Group
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-button"
        >
          Docs
          <div
            class="el-button-loader"
          />
        </button>
        <div
          class="el-mb5"
        >
          <h2
            class="el-subtitle"
          >
            Organisations
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </p>
          <div
            class="el-border-radius controls-container"
          >
            <div
              class="el-input-group"
            >
              <select
                class="el-wfull el-select"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="value"
                >
                  name
                </option>
                <option
                  value="value"
                >
                  name
                </option>
              </select>
              <label
                class="el-label"
                for="myId"
              >
                Select Organisation
              </label>
            </div>
          </div>
        </div>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <div />
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`OfficesPage should match a snapshot for the office new tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Offices
          </h1>
          <div
            class="el-mb9 el-secondary-nav"
          >
            <div
              class="el-secondary-nav-item"
            >
              Offices
            </div>
            <div
              class="el-is-active el-secondary-nav-item"
            >
              Office Groups
            </div>
          </div>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <p
            class="el-has-grey-text el-body-text"
          >
            You can create an office group with this wizard. If you want to update the information later, refer to the office groups page.
          </p>
          <div
            class="el-mb5"
          >
            <h2
              class="el-subtitle"
            >
              Organisations
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </p>
            <div
              class="el-border-radius controls-container"
            >
              <div
                class="el-input-group"
              >
                <select
                  class="el-wfull el-select"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                </select>
                <label
                  class="el-label"
                  for="myId"
                >
                  Select Organisation
                </label>
              </div>
            </div>
          </div>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <div />
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Offices
        </h1>
        <div
          class="el-mb9 el-secondary-nav"
        >
          <div
            class="el-secondary-nav-item"
          >
            Offices
          </div>
          <div
            class="el-is-active el-secondary-nav-item"
          >
            Office Groups
          </div>
        </div>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <p
          class="el-has-grey-text el-body-text"
        >
          You can create an office group with this wizard. If you want to update the information later, refer to the office groups page.
        </p>
        <div
          class="el-mb5"
        >
          <h2
            class="el-subtitle"
          >
            Organisations
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </p>
          <div
            class="el-border-radius controls-container"
          >
            <div
              class="el-input-group"
            >
              <select
                class="el-wfull el-select"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="value"
                >
                  name
                </option>
                <option
                  value="value"
                >
                  name
                </option>
              </select>
              <label
                class="el-label"
                for="myId"
              >
                Select Organisation
              </label>
            </div>
          </div>
        </div>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <div />
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`OfficesPage should match a snapshot for the offices tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Offices
          </h1>
          <div
            class="el-mb9 el-secondary-nav"
          >
            <div
              class="el-is-active el-secondary-nav-item"
            >
              Offices
            </div>
            <div
              class="el-secondary-nav-item"
            >
              Office Groups
            </div>
          </div>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <p
            class="el-has-grey-text el-body-text"
          >
            This list contains all ‘Offices’ within your organisation. To create or manage an Office Group, please visit the ‘Groups’ page.
          </p>
          <div
            class="el-mb5"
          >
            <h2
              class="el-subtitle"
            >
              Organisations
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </p>
            <div
              class="el-border-radius controls-container"
            >
              <div
                class="el-input-group"
              >
                <select
                  class="el-wfull el-select"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                </select>
                <label
                  class="el-label"
                  for="myId"
                >
                  Select Organisation
                </label>
              </div>
            </div>
          </div>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <div
            class="el-flex-justify-between el-flex-container"
          >
            <h1
              class="el-title"
            >
              SOME_NAME
               Offices
            </h1>
          </div>
          <form>
            <div
              class="el-form-layout-has-margin el-fade-in el-form-layout"
            >
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="name"
                    placeholder="Search for an office"
                  />
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Search
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-flex-grow el-flex-align-end el-hfull el-flex-container"
                >
                  <div
                    class="el-button-group"
                  >
                    <div
                      class="el-button-group-align-left el-button-group-inner"
                    >
                      <button
                        class="el-intent-primary el-button"
                        type="submit"
                      >
                        Search
                        <div
                          class="el-button-loader"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
          <div
            class="el-loader-container"
          >
            <div
              class="el-loader"
            >
              <div
                class="el-loader-moving-bar"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Offices
        </h1>
        <div
          class="el-mb9 el-secondary-nav"
        >
          <div
            class="el-is-active el-secondary-nav-item"
          >
            Offices
          </div>
          <div
            class="el-secondary-nav-item"
          >
            Office Groups
          </div>
        </div>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <p
          class="el-has-grey-text el-body-text"
        >
          This list contains all ‘Offices’ within your organisation. To create or manage an Office Group, please visit the ‘Groups’ page.
        </p>
        <div
          class="el-mb5"
        >
          <h2
            class="el-subtitle"
          >
            Organisations
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </p>
          <div
            class="el-border-radius controls-container"
          >
            <div
              class="el-input-group"
            >
              <select
                class="el-wfull el-select"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="value"
                >
                  name
                </option>
                <option
                  value="value"
                >
                  name
                </option>
              </select>
              <label
                class="el-label"
                for="myId"
              >
                Select Organisation
              </label>
            </div>
          </div>
        </div>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <div
          class="el-flex-justify-between el-flex-container"
        >
          <h1
            class="el-title"
          >
            SOME_NAME
             Offices
          </h1>
        </div>
        <form>
          <div
            class="el-form-layout-has-margin el-fade-in el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="name"
                  placeholder="Search for an office"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Search
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-flex-grow el-flex-align-end el-hfull el-flex-container"
              >
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-left el-button-group-inner"
                  >
                    <button
                      class="el-intent-primary el-button"
                      type="submit"
                    >
                      Search
                      <div
                        class="el-button-loader"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
